@@ -31,10 +31,6 @@
 #if !defined (_I_AIO_h_)
 #define _I_AIO_h_
 
-#ifndef TS_INLINE
-#define TS_INLINE
-#endif
-
 #include "libts.h"
 #include "I_EventSystem.h"
 #include "I_RecProcess.h"
