@@ -24,11 +24,6 @@
 #ifndef _P_CLUSTER_H__
 #define _P_CLUSTER_H__
 
-#ifndef INLINE_CC
-#undef  TS_INLINE
-#define TS_INLINE inline
-#endif
-
 #include "libts.h"
 #include "P_EventSystem.h"
 #include "I_RecProcess.h"
