@@ -25,9 +25,8 @@
  * Inline Functions as globals for users using the public interface
  *
  */
-#define TS_INLINE
-#define INLINE_CC
 
+#define TS_INLINE
 #include "P_DNS.h"
 
 
