@@ -135,8 +135,8 @@ public:
   {  }
 };
 
-TS_INLINE ink_hrtime ink_get_hrtime();
-TS_INLINE ink_hrtime ink_get_based_hrtime();
-TS_INLINE Thread *this_thread();
+extern ink_hrtime ink_get_hrtime();
+extern ink_hrtime ink_get_based_hrtime();
+extern Thread *this_thread();
 
 #endif /*_I_Thread_h*/
